--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="info1">Previously I am studied at AMIDEAST Center in Gaza</p>
         <p class="info1" >In The Future , I will become a Programmer.</p>
         
-        <img class="i" src="../images/J.jpg" alt="My Picture">
+        <img class="i" src="images/J.jpg" alt="My Picture">
     </div> 
     <div class="a">
 
